# CSVConverter

./: CMakeLists.txt  CSVConverterConfig.xml  README.md  main.cpp
Sources/: CSVField.cpp  CSVField.h  CSVMain.cpp  CSVMain.h  CSVMatch.cpp  CSVMatch.h  CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h  CSVXmlMatch.cpp  CSVXmlMatch.h  Configurator.cpp  Configurator.h  ICSVValues.cpp  ICSVValues.h  IWriter.cpp  IWriter.h  OutlookCSVValues.cpp  OutlookCSVValues.h
